--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,10 @@ android {
         versionCode 12
         versionName "1.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
+            abiFilters "armeabi"
+        }
     }
     buildTypes {
         debug {
@@ -29,6 +33,11 @@ android {
             buildConfigField("String", "SERVER_IP1", "\"http://172.168.20.80:10001/jlzh\"")
             buildConfigField("String", "PIC_PATH", "\"http://172.168.20.80:10001\"")
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
 }
