--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
             android:name=".MainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
 
         <service
             android:name=".service.MyService"
             android:exported="true"
-            android:priority="1000"></service>
+            android:priority="1000" />
 
         <activity
             android:name=".notice.MeetingNoticeActivity"
@@ -115,7 +115,11 @@
             android:name=".profile.CareSetActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".duty.TongxunluActivity"
+        <activity
+            android:name=".duty.TongxunluActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".FileDetailActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
     </application>
