--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,9 @@ android {
     defaultConfig {
         applicationId "com.fskj.gaj"
         minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 12
-        versionName "1.0.3"
+        targetSdkVersion 19
+        versionCode 14
+        versionName "1.0.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）
@@ -25,7 +25,9 @@ android {
             buildConfigField("String", "SERVER_IP1", "\"http://linux.fushoukeji.com/jlzh\"")
             buildConfigField("String", "PIC_PATH", "\"http://192.168.0.131:8080\"")
 
-
+//            buildConfigField("String", "SERVER_IP", "\"http://linux.fushoukeji.com/gaj\"")
+//            buildConfigField("String", "SERVER_IP1", "\"http://linux.fushoukeji.com/jlzh\"")
+//            buildConfigField("String", "PIC_PATH", "\"http://linux.fushoukeji.com\"")
         }
         release {
             minifyEnabled false
